--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/jsonwebtoken": "^8.5.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -17,13 +15,15 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.9",
     "reflect-metadata": "^0.1.13",
-    "ts-node-dev": "^1.1.6",
     "typeorm": "^0.2.34",
     "typescript": "^4.3.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
-    "@types/node": "^15.12.4"
+    "@types/jsonwebtoken": "^8.5.2",
+    "@types/node": "^15.12.4",
+    "ts-node-dev": "^1.1.6"
   }
 }
