--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "dev": "ts-node-dev src/server.ts"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -14,16 +13,18 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.9",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.34",
-    "typescript": "^4.3.4"
+    "mongoose": "^5.12.15",
+    "typescript": "^4.3.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@types/jsonwebtoken": "^8.5.2",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^15.12.4",
+    "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.6"
   }
 }
